# xdist-scheduling-exclusive

./: .flake8  .pre-commit-config.yaml  Makefile  README.md  activate.sh  data.json  pyproject.toml  pytest.ini  requirements.dev.in  requirements.dev.txt  requirements.txt
.github/workflows/: ci.yml  docs.yml  pip_publish.yml  static.yml
docs/: index.md  mkdocs-en.yml  mkdocs-ru.yml
docs/en/: index.md
docs/ru/: index.md
en/: 404.html  index.html  sitemap.xml
en/api-reference/exclusive_scheduling/: index.html
en/search/: search_index.json
htmlcov/: class_index.html  d_770fa87ee3dbcf23___about___py.html  d_e6fcf984b4dda313___about___py.html  d_e6fcf984b4dda313_exclusive_load_scheduling_py.html  d_e6fcf984b4dda313_exclusive_loadfile_scheduling_py.html  d_e6fcf984b4dda313_exclusive_loadscope_scheduling_py.html  d_e6fcf984b4dda313_exclusive_scheduling_py.html  d_e6fcf984b4dda313_load_exclusive_tests_py.html  d_e6fcf984b4dda313_loadfile_exclusive_py.html  d_e6fcf984b4dda313_scheduler_base_py.html  function_index.html  index.html  status.json  z_e6fcf984b4dda313___about___py.html  z_e6fcf984b4dda313_exclusive_load_scheduling_py.html  z_e6fcf984b4dda313_exclusive_loadfile_scheduling_py.html  z_e6fcf984b4dda313_exclusive_loadscope_scheduling_py.html  z_e6fcf984b4dda313_scheduler_base_py.html
ru/: index.html
ru/api-reference/: index.html
ru/search/: search_index.json
scripts/: compile_requirements.sh  docstrings.sh  include_pyproject_requirements.py  verup.sh
src/xdist_scheduler_ordered/: __init__.py
src/xdist_scheduling_exclusive/: __init__.py  exclusive_load_scheduling.py  exclusive_loadfile_scheduling.py  exclusive_loadscope_scheduling.py  exclusive_scheduling.py  load_exclusive_tests.py  loadfile_exclusive.py  scheduler_base.py
tests/: conftest.py  test_exclusive_load_scheduling.py  test_exclusive_loadfile_scheduling.py  test_exclusive_loadscope_scheduling.py  test_exclusive_scheduling.py  test_mock_exclusive.py  test_xdist_scheduler_ordered.py
tests/resources/: exclusive_tests.txt
